@@ -291,7 +291,16 @@
     </ant>
   </target>
   
-  <target name="prepare-release"
+  <target name="dist-war-excl-slf4j"
+          description="Creates a Solr WAR Distribution file, excluding slf4j bindings.">
+    <ant dir="webapp" target="dist" inheritall="false">
+      <propertyset refid="uptodate.and.compiled.properties"/>
+      <property name="exclude.from.war" value="*over-slf4j*,slf4j-jdk14*" />
+      <property name="solr.war.suffix" value="-excl-slf4j" />
+    </ant>
+  </target>
+
+	<target name="prepare-release"
           depends="clean, package, generate-maven-artifacts, sign-artifacts"/>
  
   <!-- make a distribution -->
